--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "ext-json": "*",
     "api-platform/api-pack": "^1.2",
     "beberlei/doctrineextensions": "^1.2",
+    "behat/mink-selenium2-driver": "^1.3",
     "nesbot/carbon": "^2.21",
     "ramsey/uuid": "^3.8",
     "ramsey/uuid-doctrine": "^1.5",
