--- a/composer.json
+++ b/composer.json
@@ -47,10 +47,10 @@
     "webmozart/assert": "^1.4"
   },
   "require-dev": {
-    "behatch/contexts": "^3.2",
     "behat/mink": "^1.7@dev",
     "behat/mink-browserkit-driver": "^1.3",
     "behat/mink-extension": "^2.3",
+    "behatch/contexts": "^3.2",
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.2",
     "friends-of-behat/symfony-extension": "^2.0",
@@ -59,6 +59,7 @@
     "phpstan/extension-installer": "^1.0",
     "phpstan/phpstan": "^0.11.12",
     "phpstan/phpstan-doctrine": "^0.11.5",
+    "phpstan/phpstan-strict-rules": "^0.11.1",
     "phpstan/phpstan-symfony": "^0.11.6",
     "rector/rector": "^0.5.9",
     "sensiolabs/security-checker": "^6.0",
