--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ services:
 install:
   - composer install
   - cp .env.travis .env
+  - cp behat.travis.yaml behat.yaml
   - php bin/console doctrine:database:create --env=test
   - php bin/console doctrine:schema:create --env=test
 
