fix missing variable

--- a/.env.travis
+++ b/.env.travis
@@ -5,3 +5,4 @@ GRR_LDAP_URL="ldap.domain.be"
 GRR_LDAP_BASE="OU=USERS,DC=domain,DC=be"
 GRR_LDAP_ADMIN="CN=admin,OU=appli,DC=domain,DC=be"
 GRR_LDAP_PWD="pwd"
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
