ajout libraires pdf, liipimagine, joujou avec les mails

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@
 /behat.yml
 /behat.yaml
 ###< friends-of-behat/symfony-extension ###
+
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
