--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,11 @@
     "ext-json": "*",
     "api-platform/api-pack": "^1.2",
     "beberlei/doctrineextensions": "^1.2",
-    "behat/mink-selenium2-driver": "^1.3",
-    "nesbot/carbon": "^2.21",
+    "h4cc/wkhtmltopdf-amd64": "^0.12.4",
+    "knplabs/knp-snappy-bundle": "^1.6",
+    "league/html-to-markdown": "^4.9",
+    "liip/imagine-bundle": "^2.2",
+    "nesbot/carbon": "^2.25",
     "ramsey/uuid": "^3.8",
     "ramsey/uuid-doctrine": "^1.5",
     "sensio/framework-extra-bundle": "^5.1",
@@ -37,12 +40,12 @@
     "symfony/serializer-pack": "*",
     "symfony/translation": "4.3.*",
     "symfony/twig-bundle": "4.3.*",
+    "symfony/twig-pack": "^1.0",
     "symfony/validator": "4.3.*",
     "symfony/web-link": "4.3.*",
     "symfony/yaml": "4.3.*",
-    "twig/extra-bundle": "^2.12",
     "twig/extensions": "^1.5",
-    "symfony/twig-pack": "^1.0",
+    "twig/extra-bundle": "^2.12",
     "twig/intl-extra": "^2.12",
     "webmozart/assert": "^1.4"
   },
@@ -50,6 +53,7 @@
     "behat/mink": "^1.7@dev",
     "behat/mink-browserkit-driver": "^1.3",
     "behat/mink-extension": "^2.3",
+    "behat/mink-selenium2-driver": "^1.3",
     "behatch/contexts": "^3.2",
     "doctrine/data-fixtures": "^1.3",
     "doctrine/doctrine-fixtures-bundle": "^3.2",
