--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -8,3 +8,5 @@ twig:
     '%kernel.project_dir%/templates/front': grr_front
     '%kernel.project_dir%/templates/security': grr_security
     '%kernel.project_dir%/templates/default': grr_default
+    '%kernel.project_dir%/public/images': images
+    '%kernel.project_dir%/public/css': css
