--- a/composer.json
+++ b/composer.json
@@ -39,13 +39,12 @@
     "symfony/security-bundle": "4.3.*",
     "symfony/serializer-pack": "*",
     "symfony/translation": "4.3.*",
-    "symfony/twig-bundle": "4.3.*",
     "symfony/twig-pack": "^1.0",
     "symfony/validator": "4.3.*",
     "symfony/web-link": "4.3.*",
     "symfony/yaml": "4.3.*",
-    "twig/extensions": "^1.5",
-    "twig/extra-bundle": "^2.12",
+    "twig/cssinliner-extra": "^2.12",
+    "twig/inky-extra": "^2.12",
     "twig/intl-extra": "^2.12",
     "webmozart/assert": "^1.4"
   },
