--- a/.env.travis
+++ b/.env.travis
@@ -6,3 +6,4 @@ GRR_LDAP_BASE="OU=USERS,DC=domain,DC=be"
 GRR_LDAP_ADMIN="CN=admin,OU=appli,DC=domain,DC=be"
 GRR_LDAP_PWD="pwd"
 CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+APP_SECRET="x890256205ads87421dsd41sqd"
