--- a/.env
+++ b/.env
@@ -30,6 +30,12 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 ###< symfony/messenger ###
 
+###> acmarche/grr ###
+SITE_BASE_SCHEME=http
+SITE_BASE_HOST=domain.be
+SITE_BASE_URL=$SITE_BASE_SCHEME://$SITE_BASE_HOST
+###< acmarche/grr ###
+
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
