--- a/.env.travis
+++ b/.env.travis
@@ -7,3 +7,10 @@ GRR_LDAP_ADMIN="CN=admin,OU=appli,DC=domain,DC=be"
 GRR_LDAP_PWD="pwd"
 CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
 APP_SECRET="x890256205ads87421dsd41sqd"
+
+
+###> acmarche/grr ###
+SITE_BASE_SCHEME=http
+SITE_BASE_HOST=domain.be
+SITE_BASE_URL=$SITE_BASE_SCHEME://$SITE_BASE_HOST
+###< acmarche/grr ###
