--- a/rector.yaml
+++ b/rector.yaml
@@ -5,3 +5,4 @@ imports:
   - { resource: 'vendor/rector/rector/config/set/symfony/symfony-code-quality.yaml' }
   - { resource: 'vendor/rector/rector/config/set/symfony/symfony44.yaml' }
   - { resource: 'vendor/rector/rector/config/set/doctrine/doctrine-code-quality.yaml' }
+  - { resource: 'vendor/rector/rector/config/set/type-declaration/type-declaration.yaml' }
