--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,6 @@
     "ext-json": "*",
     "api-platform/api-pack": "^1.2",
     "beberlei/doctrineextensions": "^1.2",
-    "h4cc/wkhtmltopdf-amd64": "^0.12.4",
     "knplabs/knp-snappy-bundle": "^1.6",
     "league/html-to-markdown": "^4.9",
     "liip/imagine-bundle": "^2.2",
@@ -19,6 +18,7 @@
     "ramsey/uuid": "^3.8",
     "ramsey/uuid-doctrine": "^1.5",
     "sensio/framework-extra-bundle": "^5.1",
+    "silvertipsoftware/wkhtmltopdf-amd64": "^0.12.5",
     "symfony/asset": "4.3.*",
     "symfony/console": "4.3.*",
     "symfony/dotenv": "4.3.*",
